--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header id="homepage">
             <div class="home-content">
                 <div class="container">
-                    <h1>Hey It's Your Boi <br> <span class="text-primary">Brizzy</span><br> Welcome to My Page</h1>
+                    <h1>Hey It's Your Boi <br> <span class="text-primary">Brizzy</span><br> Welcome to My Website Created Using HTML/CSS</h1>
                     <div class="btns">
                     <a href="#about" class="btn" hover-text="Find out!">Who am I??</a>
                     </div>
